Bug 171160 - dolphin crashes when entering ftp:\\
Summary: dolphin crashes when entering ftp:\\
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-09-16 15:28 UTC by Oliver Putz
Modified: 2009-02-05 20:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Putz 2008-09-16 15:28:33 UTC
Version:           1.1.80 (using 4.1.66 (KDE 4.1.66 (KDE 4.2 >= 20080912)), Gentoo)
Compiler:          i686-pc-linux-gnu-gcc
OS:                Linux (i686) release 2.6.25-gentoo-r7

Steps to reproduce:

1) Open dolphin
2) Enter ftp:\\ into the address bar
3) See dolphin crash with the (infinite) backtrace below.

Remark: This seems to be related to bug #166543. However, that one was talking about entering ftp:/ into the address bar (which works in a current svn build), so I opened a new bug report.

Backtrace:

Starting program: /usr/kde/svn/bin/dolphin --nofork
[Thread debugging using libthread_db enabled]
[New Thread 0xb60fc700 (LWP 25410)]
[New Thread 0xb489cb90 (LWP 25414)]
[Thread 0xb489cb90 (LWP 25414) exited]
[New Thread 0xb489cb90 (LWP 25415)]
[Thread 0xb489cb90 (LWP 25415) exited]
[New Thread 0xb489cb90 (LWP 25416)]
[Thread 0xb489cb90 (LWP 25416) exited]

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0xb60fc700 (LWP 25410)]
0xb6ac7f30 in QString::replace (this=0xbf49c4c8, before=@0xbf49c4c4, after=@0xbf49c4c0, cs=Qt::CaseSensitive) at tools/qstring.cpp:1572
1572	tools/qstring.cpp: No such file or directory.
	in tools/qstring.cpp
#0  0xb6ac7f30 in QString::replace (this=0xbf49c4c8, before=@0xbf49c4c4, after=@0xbf49c4c0, cs=Qt::CaseSensitive) at tools/qstring.cpp:1572
#1  0xb6ac85d3 in QString::normalized (this=0xbf49c658, mode=QString::NormalizationForm_KC, version=QChar::Unicode_3_2) at tools/qstring.cpp:5594
#2  0xb6b1b9dd in qt_nameprep (source=@0x891ec70) at io/qurl.cpp:3044
#3  0xb6b1d7f4 in qt_from_ACE (domain=@0x891ec70) at io/qurl.cpp:3122
#4  0xb6b1e847 in QUrlPrivate::canonicalHost (this=0x891ec60) at io/qurl.cpp:3171
#5  0xb6b20411 in QUrlPrivate::authority (this=0x891ec60, options={i = -1085683940}) at io/qurl.cpp:3205
#6  0xb6b26b7b in QUrlPrivate::toEncoded (this=0x891ec60, options={i = -1085683832}) at io/qurl.cpp:3622
#7  0xb6b2783c in QUrlPrivate::validate (this=0x891ec60) at io/qurl.cpp:3446
#8  0xb6b27ab3 in QUrl::isValid (this=0xbf49c8c0) at io/qurl.cpp:3801
#9  0xb78a1e41 in KUrl::equals (this=0xbf49c8c0, _u=@0x8929d68, options=@0xbf49c900) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kdecore/io/kurl.cpp:576
#10 0xb7f6a4a3 in KUrlNavigator::setUrl (this=0x811dd60, url=@0xbf49cb30) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kfile/kurlnavigator.cpp:975
#11 0x0806fb0a in DolphinViewContainer::setUrl (this=0x8129760, newUrl=@0xbf49cb30) at /var/tmp/portage/kde-base/dolphin-9999/work/dolphin/apps/dolphin/src/dolphinviewcontainer.cpp:176
#12 0x0806ae19 in DolphinMainWindow::changeUrl (this=0x8100230, url=@0xbf49cb30) at /var/tmp/portage/kde-base/dolphin-9999/work/dolphin/apps/dolphin/src/dolphinmainwindow.cpp:176
#13 0x0806c90b in DolphinMainWindow::qt_metacall (this=0x8100230, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbf49caac)
    at /var/tmp/portage/kde-base/dolphin-9999/work/dolphin_build/apps/dolphin/src/dolphinmainwindow.moc:163
#14 0xb6b82131 in QMetaObject::activate (sender=0x811dd60, from_signal_index=<value optimized out>, to_signal_index=28, argv=0xbf49caac) at kernel/qobject.cpp:3007
#15 0xb6b84028 in QMetaObject::activate (sender=0x811dd60, m=0xb7f77b74, local_signal_index=1, argv=0xbf49caac) at kernel/qobject.cpp:3077
#16 0xb7f68589 in KUrlNavigator::urlChanged (this=0x811dd60, _t1=@0xbf49cb30) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs_build/kfile/kurlnavigator.moc:137
#17 0xb7f6a6c4 in KUrlNavigator::setUrl (this=0x811dd60, url=@0xbf49cda0) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kfile/kurlnavigator.cpp:1003
#18 0x0806fb0a in DolphinViewContainer::setUrl (this=0x8129760, newUrl=@0xbf49cda0) at /var/tmp/portage/kde-base/dolphin-9999/work/dolphin/apps/dolphin/src/dolphinviewcontainer.cpp:176
#19 0x0806ae19 in DolphinMainWindow::changeUrl (this=0x8100230, url=@0xbf49cda0) at /var/tmp/portage/kde-base/dolphin-9999/work/dolphin/apps/dolphin/src/dolphinmainwindow.cpp:176
#20 0x0806c90b in DolphinMainWindow::qt_metacall (this=0x8100230, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbf49cd1c)
    at /var/tmp/portage/kde-base/dolphin-9999/work/dolphin_build/apps/dolphin/src/dolphinmainwindow.moc:163
#21 0xb6b82131 in QMetaObject::activate (sender=0x811dd60, from_signal_index=<value optimized out>, to_signal_index=28, argv=0xbf49cd1c) at kernel/qobject.cpp:3007
#22 0xb6b84028 in QMetaObject::activate (sender=0x811dd60, m=0xb7f77b74, local_signal_index=1, argv=0xbf49cd1c) at kernel/qobject.cpp:3077
#23 0xb7f68589 in KUrlNavigator::urlChanged (this=0x811dd60, _t1=@0xbf49cda0) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs_build/kfile/kurlnavigator.moc:137
#24 0xb7f6a6c4 in KUrlNavigator::setUrl (this=0x811dd60, url=@0xbf49d010) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kfile/kurlnavigator.cpp:1003
#25 0x0806fb0a in DolphinViewContainer::setUrl (this=0x8129760, newUrl=@0xbf49d010) at /var/tmp/portage/kde-base/dolphin-9999/work/dolphin/apps/dolphin/src/dolphinviewcontainer.cpp:176
#26 0x0806ae19 in DolphinMainWindow::changeUrl (this=0x8100230, url=@0xbf49d010) at /var/tmp/portage/kde-base/dolphin-9999/work/dolphin/apps/dolphin/src/dolphinmainwindow.cpp:176
#27 0x0806c90b in DolphinMainWindow::qt_metacall (this=0x8100230, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbf49cf8c)
    at /var/tmp/portage/kde-base/dolphin-9999/work/dolphin_build/apps/dolphin/src/dolphinmainwindow.moc:163
#28 0xb6b82131 in QMetaObject::activate (sender=0x811dd60, from_signal_index=<value optimized out>, to_signal_index=28, argv=0xbf49cf8c) at kernel/qobject.cpp:3007
#29 0xb6b84028 in QMetaObject::activate (sender=0x811dd60, m=0xb7f77b74, local_signal_index=1, argv=0xbf49cf8c) at kernel/qobject.cpp:3077
#30 0xb7f68589 in KUrlNavigator::urlChanged (this=0x811dd60, _t1=@0xbf49d010) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs_build/kfile/kurlnavigator.moc:137
#31 0xb7f6a6c4 in KUrlNavigator::setUrl (this=0x811dd60, url=@0xbf49d280) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kfile/kurlnavigator.cpp:1003
#32 0x0806fb0a in DolphinViewContainer::setUrl (this=0x8129760, newUrl=@0xbf49d280) at /var/tmp/portage/kde-base/dolphin-9999/work/dolphin/apps/dolphin/src/dolphinviewcontainer.cpp:176
#33 0x0806ae19 in DolphinMainWindow::changeUrl (this=0x8100230, url=@0xbf49d280) at /var/tmp/portage/kde-base/dolphin-9999/work/dolphin/apps/dolphin/src/dolphinmainwindow.cpp:176
#34 0x0806c90b in DolphinMainWindow::qt_metacall (this=0x8100230, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbf49d1fc)
    at /var/tmp/portage/kde-base/dolphin-9999/work/dolphin_build/apps/dolphin/src/dolphinmainwindow.moc:163
#35 0xb6b82131 in QMetaObject::activate (sender=0x811dd60, from_signal_index=<value optimized out>, to_signal_index=28, argv=0xbf49d1fc) at kernel/qobject.cpp:3007
#36 0xb6b84028 in QMetaObject::activate (sender=0x811dd60, m=0xb7f77b74, local_signal_index=1, argv=0xbf49d1fc) at kernel/qobject.cpp:3077
#37 0xb7f68589 in KUrlNavigator::urlChanged (this=0x811dd60, _t1=@0xbf49d280) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs_build/kfile/kurlnavigator.moc:137
#38 0xb7f6a6c4 in KUrlNavigator::setUrl (this=0x811dd60, url=@0xbf49d4f0) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kfile/kurlnavigator.cpp:1003
#39 0x0806fb0a in DolphinViewContainer::setUrl (this=0x8129760, newUrl=@0xbf49d4f0) at /var/tmp/portage/kde-base/dolphin-9999/work/dolphin/apps/dolphin/src/dolphinviewcontainer.cpp:176
#40 0x0806ae19 in DolphinMainWindow::changeUrl (this=0x8100230, url=@0xbf49d4f0) at /var/tmp/portage/kde-base/dolphin-9999/work/dolphin/apps/dolphin/src/dolphinmainwindow.cpp:176
#41 0x0806c90b in DolphinMainWindow::qt_metacall (this=0x8100230, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbf49d46c)
    at /var/tmp/portage/kde-base/dolphin-9999/work/dolphin_build/apps/dolphin/src/dolphinmainwindow.moc:163
[...]
Comment 1 FiNeX 2008-09-27 11:14:54 UTC
I've reproduced the crash using r864988.
Comment 2 Oliver Putz 2008-11-28 13:36:46 UTC
Still crashes with KDE-4.1.80
Comment 3 Peter Penz 2008-11-30 16:58:35 UTC
SVN commit 890888 by ppenz:

provide a central point to adjust the typed text:
* remove whitespaces at the begin and end of the text
* replace \ by /

BUG: 171160
BUG: 153347

 M  +21 -7     kurlnavigator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=890888
Comment 4 Oliver Putz 2009-02-04 09:52:58 UTC
Peter, I think this bug is not really resolved yet. I can still crash dolphin from KDE-4.2.0 by entering ftp:\\ or ftp:\ in the address bar. From the backtrace it looks like some infinite recursion going on, so I'll only post the first like 50 lines of the backtrace.

Starting program: /usr/bin/dolphin dolphin --nofork
[Thread debugging using libthread_db enabled]
[New Thread 0x7f7b95f83700 (LWP 30259)]
[New Thread 0x41579950 (LWP 30262)]
[Thread 0x41579950 (LWP 30262) exited]
[New Thread 0x41579950 (LWP 30263)]
[Thread 0x41579950 (LWP 30263) exited]
[New Thread 0x41579950 (LWP 30264)]
[Thread 0x41579950 (LWP 30264) exited]

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7f7b95f83700 (LWP 30259)]
top_check () at hooks.c:210
210	hooks.c: No such file or directory.
	in hooks.c
Current language:  auto; currently c
#0  top_check () at hooks.c:210
#1  0x00007f7b91a73f40 in malloc_check (sz=42, caller=<value optimized out>) at hooks.c:265
#2  0x00007f7b932dea87 in QByteArray::realloc (this=0x7fff9d7cc5a0, alloc=<value optimized out>) at tools/qbytearray.cpp:1363
#3  0x00007f7b932e09e8 in QByteArray::replace (this=0x7fff9d7cc5a0, before=@0x7fff9d7cc570, after=<value optimized out>) at tools/qbytearray.h:403
#4  0x00007f7b93380740 in QUrl::setEncodedUrl (this=0x1116f90, encodedUrl=<value optimized out>, parsingMode=QUrl::TolerantMode) at ../../include/QtCore/../../src/corelib/tools/qbytearray.h:555
#5  0x00007f7b93381989 in QUrl::setUrl (this=0x1116f90, url=<value optimized out>, parsingMode=<value optimized out>) at io/qurl.cpp:3896
#6  0x00007f7b939fb423 in KUrl::_setEncodedUrl (this=0x1116f90, url=@0x7fff9d7cc800) at /var/tmp/portage/kde-base/kdelibs-4.2.0-r1/work/kdelibs-4.2.0/kdecore/io/kurl.cpp:1521
#7  0x00007f7b939fe319 in KUrl (this=0x1116f90, str=@0x7fff9d7cc8b0) at /var/tmp/portage/kde-base/kdelibs-4.2.0-r1/work/kdelibs-4.2.0/kdecore/io/kurl.cpp:394
#8  0x00007f7b95a7cccd in KUrlCompletionPrivate::MyURL::init (this=0x7fff9d7cc930, _url=<value optimized out>, cwd=@0x7fff9d7cc970)
    at /var/tmp/portage/kde-base/kdelibs-4.2.0-r1/work/kdelibs-4.2.0/kio/kio/kurlcompletion.cpp:581
#9  0x00007f7b95a7cecb in KUrlCompletion::replacedPath (text=@0x7fff9d7ccb00, replaceHome=true, replaceEnv=true)
    at /var/tmp/portage/kde-base/kdelibs-4.2.0-r1/work/kdelibs-4.2.0/kio/kio/kurlcompletion.cpp:1490
#10 0x00007f7b95720cbc in KUrlNavigator::setUrl (this=0x77a1c0, url=@0x7fff9d7ccd80) at /var/tmp/portage/kde-base/kdelibs-4.2.0-r1/work/kdelibs-4.2.0/kfile/kurlnavigator.cpp:959
#11 0x000000000042d9ef in DolphinViewContainer::setUrl (this=0x746770, newUrl=@0x1) at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin-4.2.0/apps/dolphin/src/dolphinviewcontainer.cpp:180
#12 0x000000000042ae05 in DolphinMainWindow::changeUrl (this=0x72c6c0, url=@0x7fff9d7ccd80) at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin-4.2.0/apps/dolphin/src/dolphinmainwindow.cpp:214
#13 0x000000000042b062 in DolphinMainWindow::qt_metacall (this=0x72c6c0, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fff9d7ccd20)
    at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin_build/apps/dolphin/src/dolphinmainwindow.moc:165
#14 0x00007f7b933e62ac in QMetaObject::activate (sender=0x77a1c0, from_signal_index=<value optimized out>, to_signal_index=28, argv=0x1) at kernel/qobject.cpp:3028
#15 0x00007f7b9571f671 in KUrlNavigator::urlChanged (this=0x7f7b93460d39, _t1=<value optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.2.0-r1/work/kdelibs_build/kfile/kurlnavigator.moc:140
#16 0x00007f7b9572108f in KUrlNavigator::setUrl (this=0x77a1c0, url=<value optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.2.0-r1/work/kdelibs-4.2.0/kfile/kurlnavigator.cpp:1025
#17 0x000000000042d9ef in DolphinViewContainer::setUrl (this=0x746770, newUrl=@0x1) at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin-4.2.0/apps/dolphin/src/dolphinviewcontainer.cpp:180
#18 0x000000000042ae05 in DolphinMainWindow::changeUrl (this=0x72c6c0, url=@0x7fff9d7cd100) at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin-4.2.0/apps/dolphin/src/dolphinmainwindow.cpp:214
#19 0x000000000042b062 in DolphinMainWindow::qt_metacall (this=0x72c6c0, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fff9d7cd0a0)
    at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin_build/apps/dolphin/src/dolphinmainwindow.moc:165
#20 0x00007f7b933e62ac in QMetaObject::activate (sender=0x77a1c0, from_signal_index=<value optimized out>, to_signal_index=28, argv=0x1) at kernel/qobject.cpp:3028
#21 0x00007f7b9571f671 in KUrlNavigator::urlChanged (this=0x7f7b93460d39, _t1=<value optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.2.0-r1/work/kdelibs_build/kfile/kurlnavigator.moc:140
#22 0x00007f7b9572108f in KUrlNavigator::setUrl (this=0x77a1c0, url=<value optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.2.0-r1/work/kdelibs-4.2.0/kfile/kurlnavigator.cpp:1025
#23 0x000000000042d9ef in DolphinViewContainer::setUrl (this=0x746770, newUrl=@0x1) at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin-4.2.0/apps/dolphin/src/dolphinviewcontainer.cpp:180
#24 0x000000000042ae05 in DolphinMainWindow::changeUrl (this=0x72c6c0, url=@0x7fff9d7cd480) at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin-4.2.0/apps/dolphin/src/dolphinmainwindow.cpp:214
#25 0x000000000042b062 in DolphinMainWindow::qt_metacall (this=0x72c6c0, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fff9d7cd420)
    at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin_build/apps/dolphin/src/dolphinmainwindow.moc:165
#26 0x00007f7b933e62ac in QMetaObject::activate (sender=0x77a1c0, from_signal_index=<value optimized out>, to_signal_index=28, argv=0x1) at kernel/qobject.cpp:3028
#27 0x00007f7b9571f671 in KUrlNavigator::urlChanged (this=0x7f7b93460d39, _t1=<value optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.2.0-r1/work/kdelibs_build/kfile/kurlnavigator.moc:140
#28 0x00007f7b9572108f in KUrlNavigator::setUrl (this=0x77a1c0, url=<value optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.2.0-r1/work/kdelibs-4.2.0/kfile/kurlnavigator.cpp:1025
#29 0x000000000042d9ef in DolphinViewContainer::setUrl (this=0x746770, newUrl=@0x1) at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin-4.2.0/apps/dolphin/src/dolphinviewcontainer.cpp:180
#30 0x000000000042ae05 in DolphinMainWindow::changeUrl (this=0x72c6c0, url=@0x7fff9d7cd800) at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin-4.2.0/apps/dolphin/src/dolphinmainwindow.cpp:214
#31 0x000000000042b062 in DolphinMainWindow::qt_metacall (this=0x72c6c0, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fff9d7cd7a0)
    at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin_build/apps/dolphin/src/dolphinmainwindow.moc:165
#32 0x00007f7b933e62ac in QMetaObject::activate (sender=0x77a1c0, from_signal_index=<value optimized out>, to_signal_index=28, argv=0x1) at kernel/qobject.cpp:3028
#33 0x00007f7b9571f671 in KUrlNavigator::urlChanged (this=0x7f7b93460d39, _t1=<value optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.2.0-r1/work/kdelibs_build/kfile/kurlnavigator.moc:140
#34 0x00007f7b9572108f in KUrlNavigator::setUrl (this=0x77a1c0, url=<value optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.2.0-r1/work/kdelibs-4.2.0/kfile/kurlnavigator.cpp:1025
#35 0x000000000042d9ef in DolphinViewContainer::setUrl (this=0x746770, newUrl=@0x1) at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin-4.2.0/apps/dolphin/src/dolphinviewcontainer.cpp:180
#36 0x000000000042ae05 in DolphinMainWindow::changeUrl (this=0x72c6c0, url=@0x7fff9d7cdb80) at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin-4.2.0/apps/dolphin/src/dolphinmainwindow.cpp:214
#37 0x000000000042b062 in DolphinMainWindow::qt_metacall (this=0x72c6c0, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fff9d7cdb20)
    at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin_build/apps/dolphin/src/dolphinmainwindow.moc:165
#38 0x00007f7b933e62ac in QMetaObject::activate (sender=0x77a1c0, from_signal_index=<value optimized out>, to_signal_index=28, argv=0x1) at kernel/qobject.cpp:3028
#39 0x00007f7b9571f671 in KUrlNavigator::urlChanged (this=0x7f7b93460d39, _t1=<value optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.2.0-r1/work/kdelibs_build/kfile/kurlnavigator.moc:140
#40 0x00007f7b9572108f in KUrlNavigator::setUrl (this=0x77a1c0, url=<value optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.2.0-r1/work/kdelibs-4.2.0/kfile/kurlnavigator.cpp:1025
#41 0x000000000042d9ef in DolphinViewContainer::setUrl (this=0x746770, newUrl=@0x1) at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin-4.2.0/apps/dolphin/src/dolphinviewcontainer.cpp:180
#42 0x000000000042ae05 in DolphinMainWindow::changeUrl (this=0x72c6c0, url=@0x7fff9d7cdf00) at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin-4.2.0/apps/dolphin/src/dolphinmainwindow.cpp:214
#43 0x000000000042b062 in DolphinMainWindow::qt_metacall (this=0x72c6c0, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fff9d7cdea0)
    at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin_build/apps/dolphin/src/dolphinmainwindow.moc:165
#44 0x00007f7b933e62ac in QMetaObject::activate (sender=0x77a1c0, from_signal_index=<value optimized out>, to_signal_index=28, argv=0x1) at kernel/qobject.cpp:3028
#45 0x00007f7b9571f671 in KUrlNavigator::urlChanged (this=0x7f7b93460d39, _t1=<value optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.2.0-r1/work/kdelibs_build/kfile/kurlnavigator.moc:140
#46 0x00007f7b9572108f in KUrlNavigator::setUrl (this=0x77a1c0, url=<value optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.2.0-r1/work/kdelibs-4.2.0/kfile/kurlnavigator.cpp:1025
#47 0x000000000042d9ef in DolphinViewContainer::setUrl (this=0x746770, newUrl=@0x1) at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin-4.2.0/apps/dolphin/src/dolphinviewcontainer.cpp:180
#48 0x000000000042ae05 in DolphinMainWindow::changeUrl (this=0x72c6c0, url=@0x7fff9d7ce280) at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin-4.2.0/apps/dolphin/src/dolphinmainwindow.cpp:214
#49 0x000000000042b062 in DolphinMainWindow::qt_metacall (this=0x72c6c0, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fff9d7ce220)
    at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin_build/apps/dolphin/src/dolphinmainwindow.moc:165
#50 0x00007f7b933e62ac in QMetaObject::activate (sender=0x77a1c0, from_signal_index=<value optimized out>, to_signal_index=28, argv=0x1) at kernel/qobject.cpp:3028
#51 0x00007f7b9571f671 in KUrlNavigator::urlChanged (this=0x7f7b93460d39, _t1=<value optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.2.0-r1/work/kdelibs_build/kfile/kurlnavigator.moc:140
#52 0x00007f7b9572108f in KUrlNavigator::setUrl (this=0x77a1c0, url=<value optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.2.0-r1/work/kdelibs-4.2.0/kfile/kurlnavigator.cpp:1025
#53 0x000000000042d9ef in DolphinViewContainer::setUrl (this=0x746770, newUrl=@0x1) at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin-4.2.0/apps/dolphin/src/dolphinviewcontainer.cpp:180
#54 0x000000000042ae05 in DolphinMainWindow::changeUrl (this=0x72c6c0, url=@0x7fff9d7ce600) at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin-4.2.0/apps/dolphin/src/dolphinmainwindow.cpp:214
#55 0x000000000042b062 in DolphinMainWindow::qt_metacall (this=0x72c6c0, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fff9d7ce5a0)
    at /var/tmp/portage/kde-base/dolphin-4.2.0/work/dolphin_build/apps/dolphin/src/dolphinmainwindow.moc:165
Comment 5 Peter Penz 2009-02-04 19:47:01 UTC
Thanks Oliver for retesting, I can confirm that the issue has returned in KDE 4.2.0 and is also there on trunk. I'll implement a unit test for this, so that we face regressions automatically in future...
Comment 6 Peter Penz 2009-02-05 20:06:08 UTC
SVN commit 921833 by ppenz:

Assure that the signal urlChanged() is not emitted if the URLs are equal. The (more expensive) check below fails for invalid URLs and hence an endless loop can be triggered in applications like Dolphin.

BUG: 171160

 M  +4 -0      kurlnavigator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=921833
Comment 7 Peter Penz 2009-02-05 20:15:16 UTC
SVN commit 921837 by ppenz:

rename the input parameter 'url' to 'newUrl' to prevent confusions with the method KUrlNavigator::url()

CCBUG: 171160

 M  +9 -10     kurlnavigator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=921837
Comment 8 Peter Penz 2009-02-05 20:23:21 UTC
SVN commit 921839 by ppenz:

Backport of SVN commit 921833: Assure that the signal urlChanged() is not emitted if the URLs are equal. The (more expensive) check below fails for invalid URLs and hence an endless loop can be triggered in applications like Dolphin.

CCBUG: 171160 

 M  +4 -0      kurlnavigator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=921839
Comment 9 Peter Penz 2009-02-05 20:32:35 UTC
SVN commit 921841 by ppenz:

Backport of SVN commit 921837: rename the input parameter 'url' to 'newUrl' to prevent confusions with the method KUrlNavigator::url()

CCBUG: 171160 

 M  +12 -12    kurlnavigator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=921841