provide a central point to adjust the typed text: * remove whitespaces at the begin and end of the text * replace \ by /

BUG: 171160
BUG: 153347

svn path=/trunk/KDE/kdelibs/; revision=890888